Updated page Selection methods/cs

--- a/wiki/cs/Selection_methods.html
+++ b/wiki/cs/Selection_methods.html
@@ -14,7 +14,7 @@
 <li><a href="../ko/Selection_methods.html" class="mw-pt-progress mw-pt-progress--low" title="&#45824;&#49345;&#47932; &#49440;&#53469; &#48169;&#48277; (11% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Navigace my&scaron;&iacute;</a></div>
-    <div><a href="../index.php?title=Navigation_Cube/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Navigation Cube/cs (page does not exist)">Naviga&#269;n&iacute; kostka</a>
+    <div><a href="../cs/Navigation_Cube.html" title="Navigation Cube/cs">Naviga&#269;n&iacute; kostka</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../cs/Online_Help_Toc.html" title="Online Help Toc/cs">Index</a> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Online_Help_Toc.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
 </div>
@@ -51,7 +51,7 @@
 </p>
 <h3><span class="mw-headline" id="Export_objektu">Export objektu</span></h3>
 <p><i>To by m&#283;lo b&yacute;t na str&aacute;nce <a href="../index.php?title=Zobrazen%C3%AD_v%C3%BDb%C4%9Bru&amp;action=edit&amp;redlink=1.html" class="new" title="Zobrazen&iacute; v&yacute;b&#283;ru (page does not exist)">zobrazen&iacute; v&yacute;b&#283;ru</a>.</i>
-</p><p>Vyberte libovoln&yacute; komplexn&iacute; objekt, nap&#345;&iacute;klad <a href="../index.php?title=PartDesign_Body/cs&amp;action=edit&amp;redlink=1.html" class="new" title="PartDesign Body/cs (page does not exist)">PartDesign Body</a> nebo <a href="../Std_Part.html" title="Std Part">Std Part</a>, pot&eacute; v <a href="../index.php?title=Selection_view/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Selection view/cs (page does not exist)">zobrazen&iacute; v&yacute;b&#283;ru</a> znovu vyberte objekt a stiskn&#283;te kl&aacute;vesy <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> + <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">C</span> na kl&aacute;vesnici, aby se otev&#345;elo dialogov&eacute; okno <a href="../index.php?title=Template;MenuCommand/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Template:MenuCommand/cs (page does not exist)">Template:MenuCommand/cs</a>. To umo&#382;&#328;uje kop&iacute;rovat vybran&yacute; objekt spole&#269;n&#283; se v&scaron;emi nebo pouze n&#283;kter&yacute;mi z&aacute;visl&yacute;mi objekty tohoto objektu. Nap&#345;&iacute;klad u <a href="../index.php?title=Std_Part/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Part/cs (page does not exist)">Std Part</a> lze vybrat nejen samotn&yacute; <a href="../index.php?title=Std_Part/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Part/cs (page does not exist)">Std Part</a>, ale tak&eacute; jeho po&#269;&aacute;tek, t&#345;i z&aacute;kladn&iacute; osy (XYZ) a t&#345;i z&aacute;kladn&iacute; roviny (XY, YZ, XZ).
+</p><p>Vyberte libovoln&yacute; komplexn&iacute; objekt, nap&#345;&iacute;klad <a href="../index.php?title=PartDesign_Body/cs&amp;action=edit&amp;redlink=1.html" class="new" title="PartDesign Body/cs (page does not exist)">PartDesign Body</a> nebo <a href="../Std_Part.html" title="Std Part">Std Part</a>, pot&eacute; v <a href="../index.php?title=Selection_view/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Selection view/cs (page does not exist)">zobrazen&iacute; v&yacute;b&#283;ru</a> znovu vyberte objekt a stiskn&#283;te kl&aacute;vesy <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> + <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">C</span> na kl&aacute;vesnici, aby se otev&#345;elo dialogov&eacute; okno <b>V&yacute;b&#283;r objektu</b>. To umo&#382;&#328;uje kop&iacute;rovat vybran&yacute; objekt spole&#269;n&#283; se v&scaron;emi nebo pouze n&#283;kter&yacute;mi z&aacute;visl&yacute;mi objekty tohoto objektu. Nap&#345;&iacute;klad u <a href="../index.php?title=Std_Part/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Part/cs (page does not exist)">Std Part</a> lze vybrat nejen samotn&yacute; <a href="../index.php?title=Std_Part/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Part/cs (page does not exist)">Std Part</a>, ale tak&eacute; jeho po&#269;&aacute;tek, t&#345;i z&aacute;kladn&iacute; osy (XYZ) a t&#345;i z&aacute;kladn&iacute; roviny (XY, YZ, XZ).
 </p><p>Po stisknut&iacute; tla&#269;&iacute;tka <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> se vybran&eacute; objekty zkop&iacute;ruj&iacute; do pam&#283;ti a pot&eacute; je lze vlo&#382;it do dokumentu, aby se duplikovaly pouze tyto objekty.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=ObjectSelection.png&amp;filetimestamp=20200204032022&amp;.html" class="mw-file-description"><img src="../File/ObjectSelection.png" decoding="async" width="623" height="415" class="mw-file-element" data-file-width="623" data-file-height="415"></a></span> 
 </p><p><a href="../index.php?title=Template;Popisek&amp;action=edit&amp;redlink=1.html" class="new" title="Template:Popisek (page does not exist)">Template:Popisek</a>
@@ -89,12 +89,12 @@
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">Gui</span><span class="o">.</span><span class="n">Selection</span><span class="o">.</span><span class="n">removeSelectionGate</span><span class="p">()</span>
 </pre></div>
-<p>Dal&scaron;&iacute; informace o pou&#382;&iacute;v&aacute;n&iacute; t&#283;chto n&aacute;stroj&#367; najdete v <a href="../index.php?title=Source_documentation/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Source documentation/cs (page does not exist)">zdrojov&eacute; dokumentaci</a> a <a href="../index.php?title=Std_PythonHelp/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std PythonHelp/cs (page does not exist)">Std PythonHelp</a>.
+<p>Dal&scaron;&iacute; informace o pou&#382;&iacute;v&aacute;n&iacute; t&#283;chto n&aacute;stroj&#367; najdete v <a href="../cs/Source_documentation.html" title="Source documentation/cs">zdrojov&eacute; dokumentaci</a> a <a href="../index.php?title=Std_PythonHelp/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std PythonHelp/cs (page does not exist)">Std PythonHelp</a>.
 </p><p><br>
 </p>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Navigace my&scaron;&iacute;</a></div>
-    <div><a href="../index.php?title=Navigation_Cube/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Navigation Cube/cs (page does not exist)">Naviga&#269;n&iacute; kostka</a>
+    <div><a href="../cs/Navigation_Cube.html" title="Navigation Cube/cs">Naviga&#269;n&iacute; kostka</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../cs/Online_Help_Toc.html" title="Online Help Toc/cs">Index</a> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Online_Help_Toc.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
 </div>
@@ -102,11 +102,11 @@
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=User_hub.png&amp;filetimestamp=20190221145008&amp;.html" class="mw-file-description"><img src="../File/User_hub.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../cs/User_hub.html" title="User hub/cs">User documentation</a>
         <div class="NavContent mw-collapsible-content" style="margin: 10px; border: 1px solid var(--border-color-base, #aaaaaa); text-align: left; border-collapse: collapse; font-weight: normal; font-size: 100%; clear:both; margin-top: 1px; background-color: var(--background-color-neutral-subtle, #fefefe);">
 <ul><li><b><a href="../cs/Getting_started.html" title="Getting started/cs">Getting started</a></b></li>
-<li><b>Installation:</b> <a href="../cs/Download.html" title="Download/cs">Download</a>, <a href="../cs/Installing_on_Windows.html" title="Installing on Windows/cs">Windows</a>, <a href="../cs/Installing_on_Linux.html" title="Installing on Linux/cs">Linux</a>, <a href="../cs/Installing_on_Mac.html" title="Installing on Mac/cs">Mac</a>, <a href="../cs/Installing_additional_components.html" title="Installing additional components/cs">Additional components</a>, <a href="../index.php?title=Compile_on_Docker/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Compile on Docker/cs (page does not exist)">Docker</a>, <a href="../index.php?title=AppImage/cs&amp;action=edit&amp;redlink=1.html" class="new" title="AppImage/cs (page does not exist)">AppImage</a>, <a href="../index.php?title=Ubuntu_Snap/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Ubuntu Snap/cs (page does not exist)">Ubuntu Snap</a></li>
+<li><b>Installation:</b> <a href="../cs/Download.html" title="Download/cs">Download</a>, <a href="../cs/Installing_on_Windows.html" title="Installing on Windows/cs">Windows</a>, <a href="../cs/Installing_on_Linux.html" title="Installing on Linux/cs">Linux</a>, <a href="../cs/Installing_on_Mac.html" title="Installing on Mac/cs">Mac</a>, <a href="../cs/Installing_additional_components.html" title="Installing additional components/cs">Additional components</a>, <a href="../cs/Compile_on_Docker.html" title="Compile on Docker/cs">Docker</a>, <a href="../index.php?title=AppImage/cs&amp;action=edit&amp;redlink=1.html" class="new" title="AppImage/cs (page does not exist)">AppImage</a>, <a href="../index.php?title=Ubuntu_Snap/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Ubuntu Snap/cs (page does not exist)">Ubuntu Snap</a></li>
 <li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../index.php?title=Interface/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Interface/cs (page does not exist)">Interface</a>, <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Mouse navigation</a>, <a class="mw-selflink selflink">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
 <hr>
 <ul><li><b>Help:</b> <a href="../cs/Tutorials.html" title="Tutorials/cs">Tutorials</a>, <a href="../cs/Video_tutorials.html" title="Video tutorials/cs">Video tutorials</a></li>
-<li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../index.php?title=Std_Base/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Base/cs (page does not exist)">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a href="../cs/CAM_Workbench.html" title="CAM Workbench/cs">CAM</a>, <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../index.php?title=Material_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Material Workbench/cs (page does not exist)">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a href="../cs/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/cs">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../index.php?title=Testing/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Testing/cs (page does not exist)">Test Framework</a></li></ul>
+<li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../cs/Std_Base.html" title="Std Base/cs">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a href="../cs/CAM_Workbench.html" title="CAM Workbench/cs">CAM</a>, <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../cs/Material_Workbench.html" title="Material Workbench/cs">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a href="../cs/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/cs">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../cs/Testing.html" title="Testing/cs">Test Framework</a></li></ul>
 <hr>
 <ul><li><b><a href="../index.php?title=Addon/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Addon/cs (page does not exist)">Addons</a>:</b> <a href="../index.php?title=Std_AddonMgr/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std AddonMgr/cs (page does not exist)">Addon Manager</a>, <a href="../index.php?title=External_workbenches/cs&amp;action=edit&amp;redlink=1.html" class="new" title="External workbenches/cs (page does not exist)">External workbenches</a>, <a href="../cs/Scripting_and_macros.html" title="Scripting and macros/cs">Scripting and macros</a></li></ul>
 <hr>
@@ -114,15 +114,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111112128
+Cached time: 20260115092434
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.072 seconds
-Real time usage: 0.132 seconds
-Preprocessor visited node count: 274/1000000
-Post&#8208;expand include size: 9069/2097152 bytes
-Template argument size: 2677/2097152 bytes
+CPU time usage: 0.069 seconds
+Real time usage: 0.113 seconds
+Preprocessor visited node count: 277/1000000
+Post&#8208;expand include size: 9062/2097152 bytes
+Template argument size: 2692/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 3/100
 Unstrip recursion depth: 0/20
@@ -130,19 +130,19 @@ Unstrip post&#8208;expand size: 4592/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.636      1 -total
- 35.79%    9.890      1 Template:Userdocnavi/cs
- 16.56%    4.578      1 Template:Navigation_menu_2
- 10.99%    3.037      1 Template:MenuCommand/cs
- 10.63%    2.937      2 Template:Docnav
- 10.01%    2.767      3 Template:Code
-  7.23%    1.998      3 Template:Incode
-  5.91%    1.632      1 Template:Button
-  5.79%    1.599      4 Template:KEY
-  4.54%    1.254      1 Template:TOCright
+100.00%   19.267      1 -total
+ 26.90%    5.183      1 Template:Userdocnavi/cs
+ 13.56%    2.612      2 Template:Docnav
+ 12.50%    2.408      1 Template:Navigation_menu_2
+ 12.42%    2.393      3 Template:Code
+  8.88%    1.710      3 Template:Incode
+  8.19%    1.579      4 Template:KEY
+  7.48%    1.442      1 Template:TOCright
+  7.12%    1.371      1 Template:MenuCommand
+  6.90%    1.329      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410149-0!canonical and timestamp 20260111112128 and revision id 1733263. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410149-0!canonical and timestamp 20260115092434 and revision id 1738587. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
