Updated page User hub/hu

--- a/wiki/hu/User_hub.html
+++ b/wiki/hu/User_hub.html
@@ -6,7 +6,7 @@
 <li><a href="../es/User_hub.html" class="mw-pt-progress mw-pt-progress--high" title="Centro de usuarios (82% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/User_hub.html" class="mw-pt-progress mw-pt-progress--complete" title="Documentation pour les utilisateurs (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../hr/User_hub.html" class="mw-pt-progress mw-pt-progress--med" title="Korisni&#269;ko okru&#382;enje (22% translated)" lang="hr" dir="ltr">hrvatski</a></li>
-<li><a href="../it/User_hub.html" class="mw-pt-progress mw-pt-progress--high" title="Hub degli utenti (88% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="../it/User_hub.html" class="mw-pt-progress mw-pt-progress--complete" title="Hub degli utenti (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="hu" dir="ltr">magyar</span></li>
 <li><a href="../pl/User_hub.html" class="mw-pt-progress mw-pt-progress--complete" title="Centrum u&#380;ytkownika. (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub/pt (12% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
@@ -15,7 +15,7 @@
 <li><a href="../fi/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (4% translated)" lang="fi" dir="ltr">suomi</a></li>
 <li><a href="../sv/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (10% translated)" lang="sv" dir="ltr">svenska</a></li>
 <li><a href="../cs/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="U&#382;ivatelsk&eacute; centrum (8% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
-<li><a href="../bg/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="&#1055;&#1086;&#1084;&#1086;&#1097; &#1047;&#1072; &#1053;&#1086;&#1074;&#1080; &#1055;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1080; (10% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
+<li><a href="../bg/User_hub.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1062;&#1077;&#1085;&#1090;&#1098;&#1088; &#1079;&#1072; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1080; (100% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="../ru/User_hub.html" class="mw-pt-progress mw-pt-progress--high" title="&#1062;&#1077;&#1085;&#1090;&#1088; &#1087;&#1086;&#1083;&#1100;&#1079;&#1086;&#1074;&#1072;&#1090;&#1077;&#1083;&#1077;&#1081; (84% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (2% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
 <li><a href="../zh/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (2% translated)" lang="zh" dir="ltr">&#20013;&#25991;</a></li>
@@ -67,7 +67,7 @@
 </p>
 <h3><span class="mw-headline" id="Munkapadok">Munkapadok</span></h3>
 <p><a href="../index.php?title=Munkapadok&amp;action=edit&amp;redlink=1.html" class="new" title="Munkapadok (page does not exist)">A munkapadok</a> meghat&aacute;rozott feladatokhoz haszn&aacute;lt eszk&ouml;z&ouml;k gy&#369;jtem&eacute;nye. A lentebb megadott munkafel&uuml;letek minden FreeCAD telep&iacute;t&eacute;s r&eacute;szei.
-</p><p><a href="../index.php?title=Template;Kiad%C3%A1s&amp;action=edit&amp;redlink=1.html" class="new" title="Template:Kiad&aacute;s (page does not exist)">Template:Kiad&aacute;s</a>: N&eacute;h&aacute;ny ritk&aacute;n haszn&aacute;lt munkafel&uuml;let alap&eacute;rtelmezetten ki van kapcsolva. Ezeket lentebb a <code>D</code> jelz&eacute;ssel l&aacute;ttuk el. Egy kikapcsolt munkafel&uuml;let a <a href="../Preferences_Editor.html#Workbenches" title="Preferences Editor">Be&aacute;ll&iacute;t&aacute;sok</a> men&uuml;ben enged&eacute;lyezhet&#337;. A kikapcsolt munkafel&uuml;letek tov&aacute;bbra is aktiv&aacute;lhat&oacute;k a <a href="../Std_Workbench.html" title="Std Workbench">TabBar munkafel&uuml;letv&aacute;laszt&oacute;</a> <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=List-add.svg&amp;filetimestamp=20240522171753&amp;.html" class="mw-file-description"><img src="../File/List-add.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> men&uuml;j&eacute;b&#337;l.
+</p><p><a href="../index.php?title=Template;Version/hu&amp;action=edit&amp;redlink=1.html" class="new" title="Template:Version/hu (page does not exist)">Template:Version/hu</a>: N&eacute;h&aacute;ny ritk&aacute;n haszn&aacute;lt munkafel&uuml;let alap&eacute;rtelmezetten ki van kapcsolva. Ezeket lentebb a <code>D</code> jelz&eacute;ssel l&aacute;ttuk el. Egy kikapcsolt munkafel&uuml;let a <a href="../Preferences_Editor.html#Workbenches" title="Preferences Editor">Be&aacute;ll&iacute;t&aacute;sok</a> men&uuml;ben enged&eacute;lyezhet&#337;. A kikapcsolt munkafel&uuml;letek tov&aacute;bbra is aktiv&aacute;lhat&oacute;k a <a href="../Std_Workbench.html" title="Std Workbench">TabBar munkafel&uuml;letv&aacute;laszt&oacute;</a> <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=List-add.svg&amp;filetimestamp=20240522171753&amp;.html" class="mw-file-description"><img src="../File/List-add.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> men&uuml;j&eacute;b&#337;l.
 </p><p>--K&eacute;rlek, tartsd ezt a list&aacute;t &ouml;sszhangban a Online_Help_Toc &eacute;s a Workbenches--
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Freecad.svg&amp;filetimestamp=20240704193018&amp;.html" class="mw-file-description"><img src="../File/Freecad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <a href="../Std_Base.html" title="Std Base">Szabv&aacute;nyos eszk&ouml;z&ouml;k</a>. Ezek a parancsok &eacute;s eszk&ouml;z&ouml;k minden munkapadon megtal&aacute;lhat&oacute;k.</li></ul>
@@ -139,34 +139,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260108020029
+Cached time: 20260115092508
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.199 seconds
-Real time usage: 0.410 seconds
+CPU time usage: 0.111 seconds
+Real time usage: 0.178 seconds
 Preprocessor visited node count: 285/1000000
-Post&#8208;expand include size: 6579/2097152 bytes
+Post&#8208;expand include size: 6582/2097152 bytes
 Template argument size: 2007/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4291/5000000 bytes
+Unstrip post&#8208;expand size: 4295/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.230      1 -total
- 50.86%   14.357      1 Template:Userdocnavi/hu
- 20.67%    5.836      1 Template:Navigation_menu_2
-  8.91%    2.516      7 Template:Incode
-  8.27%    2.335      2 Template:VersionMinus
-  7.77%    2.194      2 Template:Version
-  7.34%    2.073      1 Template:Button
-  6.64%    1.874      1 Template:TOCright
-  4.62%    1.304      1 Template:Kiad&aacute;s
+100.00%   17.747      1 -total
+ 36.59%    6.494      1 Template:Userdocnavi/hu
+ 14.49%    2.571      1 Template:Navigation_menu_2
+ 14.33%    2.543      7 Template:Incode
+ 11.56%    2.051      1 Template:Button
+  9.79%    1.738      2 Template:VersionMinus
+  8.26%    1.465      1 Template:TOCright
+  8.06%    1.430      2 Template:Version
+  4.85%    0.861      1 Template:Version/hu
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:139542-0!canonical and timestamp 20260108020029 and revision id 1728463. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:139542-0!canonical and timestamp 20260115092508 and revision id 1738589. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
