--- a/wiki/cs/Selection_methods.html
+++ b/wiki/cs/Selection_methods.html
@@ -54,8 +54,9 @@
 </p><p>Vyberte libovoln&yacute; komplexn&iacute; objekt, nap&#345;&iacute;klad <a href="../index.php?title=PartDesign_Body/cs&amp;action=edit&amp;redlink=1.html" class="new" title="PartDesign Body/cs (page does not exist)">PartDesign Body</a> nebo <a href="../Std_Part.html" title="Std Part">Std Part</a>, pot&eacute; v <a href="../index.php?title=Selection_view/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Selection view/cs (page does not exist)">zobrazen&iacute; v&yacute;b&#283;ru</a> znovu vyberte objekt a stiskn&#283;te kl&aacute;vesy <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> + <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">C</span> na kl&aacute;vesnici, aby se otev&#345;elo dialogov&eacute; okno <b>V&yacute;b&#283;r objektu</b>. To umo&#382;&#328;uje kop&iacute;rovat vybran&yacute; objekt spole&#269;n&#283; se v&scaron;emi nebo pouze n&#283;kter&yacute;mi z&aacute;visl&yacute;mi objekty tohoto objektu. Nap&#345;&iacute;klad u <a href="../index.php?title=Std_Part/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Part/cs (page does not exist)">Std Part</a> lze vybrat nejen samotn&yacute; <a href="../index.php?title=Std_Part/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Part/cs (page does not exist)">Std Part</a>, ale tak&eacute; jeho po&#269;&aacute;tek, t&#345;i z&aacute;kladn&iacute; osy (XYZ) a t&#345;i z&aacute;kladn&iacute; roviny (XY, YZ, XZ).
 </p><p>Po stisknut&iacute; tla&#269;&iacute;tka <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> se vybran&eacute; objekty zkop&iacute;ruj&iacute; do pam&#283;ti a pot&eacute; je lze vlo&#382;it do dokumentu, aby se duplikovaly pouze tyto objekty.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=ObjectSelection.png&amp;filetimestamp=20200204032022&amp;.html" class="mw-file-description"><img src="../File/ObjectSelection.png" decoding="async" width="623" height="415" class="mw-file-element" data-file-width="623" data-file-height="415"></a></span> 
-</p><p><a href="../index.php?title=Template;Popisek&amp;action=edit&amp;redlink=1.html" class="new" title="Template:Popisek (page does not exist)">Template:Popisek</a>
-</p><p><span id="Tree_view"></span>
+</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Dialogov&eacute; okno pro v&yacute;b&#283;r objekt&#367;, kter&eacute; se spou&scaron;t&iacute; z <a href="../index.php?title=Selection_view/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Selection view/cs (page does not exist)">zobrazen&iacute; v&yacute;b&#283;ru</a>.</p>
+<p><span id="Tree_view"></span>
 </p>
 <h2><span id="Stromov.C3.A1_struktura"></span><span class="mw-headline" id="Stromov&aacute;_struktura">Stromov&aacute; struktura</span></h2>
 <p>Ve <a href="../index.php?title=Tree_view/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Tree view/cs (page does not exist)">stromov&eacute;m zobrazen&iacute;</a> lze polo&#382;ky vyb&iacute;rat nebo odzna&#269;ovat po jedn&eacute; tak, &#382;e podr&#382;&iacute;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> a kliknete my&scaron;&iacute;.
@@ -114,15 +115,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115092434
+Cached time: 20260115092602
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.069 seconds
-Real time usage: 0.113 seconds
-Preprocessor visited node count: 277/1000000
-Post&#8208;expand include size: 9062/2097152 bytes
-Template argument size: 2692/2097152 bytes
+CPU time usage: 0.082 seconds
+Real time usage: 0.156 seconds
+Preprocessor visited node count: 284/1000000
+Post&#8208;expand include size: 9861/2097152 bytes
+Template argument size: 2794/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 3/100
 Unstrip recursion depth: 0/20
@@ -130,19 +131,19 @@ Unstrip post&#8208;expand size: 4592/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.267      1 -total
- 26.90%    5.183      1 Template:Userdocnavi/cs
- 13.56%    2.612      2 Template:Docnav
- 12.50%    2.408      1 Template:Navigation_menu_2
- 12.42%    2.393      3 Template:Code
-  8.88%    1.710      3 Template:Incode
-  8.19%    1.579      4 Template:KEY
-  7.48%    1.442      1 Template:TOCright
-  7.12%    1.371      1 Template:MenuCommand
-  6.90%    1.329      1 Template:Button
+100.00%   35.226      1 -total
+ 32.65%   11.501      1 Template:Userdocnavi/cs
+ 19.66%    6.925      1 Template:Navigation_menu_2
+ 15.70%    5.531      2 Template:Docnav
+ 10.69%    3.764      3 Template:Code
+  7.19%    2.534      4 Template:KEY
+  6.34%    2.232      1 Template:MenuCommand
+  6.29%    2.217      3 Template:Incode
+  6.25%    2.201      1 Template:Caption
+  5.85%    2.061      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410149-0!canonical and timestamp 20260115092434 and revision id 1738587. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410149-0!canonical and timestamp 20260115092602 and revision id 1738593. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
