--- a/wiki/Std_Measure.html
+++ b/wiki/Std_Measure.html
@@ -1,9 +1,9 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Std Measure</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Std+Measure&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Std_Measure.html" class="mw-pt-progress mw-pt-progress--complete" title="Std Messen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Std_Measure.html" class="mw-pt-progress mw-pt-progress--high" title="Std Messen (95% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
-<li><a href="fr/Std_Measure.html" class="mw-pt-progress mw-pt-progress--complete" title="Std Mesurer (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="fr/Std_Measure.html" class="mw-pt-progress mw-pt-progress--high" title="Std Mesurer (95% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="it/Std_Measure.html" class="mw-pt-progress mw-pt-progress--high" title="Strumenti&#720; Misurare (75% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="pl/Std_Measure.html" class="mw-pt-progress mw-pt-progress--complete" title="Std: Pomiary (100% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="pl/Std_Measure.html" class="mw-pt-progress mw-pt-progress--high" title="Std: Pomiary (95% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="pt-br/Std_Measure.html" class="mw-pt-progress mw-pt-progress--med" title="Medida (20% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="ru/Std_Measure.html" class="mw-pt-progress mw-pt-progress--high" title="&#1057;&#1090;&#1072;&#1085;&#1076;&#1072;&#1088;&#1090;&#1085;&#1099;&#1077; &#1048;&#1079;&#1084;&#1077;&#1088;&#1080;&#1090;&#1100; (75% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="ja/Std_Measure.html" class="mw-pt-progress mw-pt-progress--med" title="&#27161;&#28310;&#28204;&#23450;&#12484;&#12540;&#12523; (35% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li></ul></div>
@@ -169,35 +169,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114192555
+Cached time: 20260115095200
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.142 seconds
-Real time usage: 0.182 seconds
+CPU time usage: 0.138 seconds
+Real time usage: 0.154 seconds
 Preprocessor visited node count: 1412/1000000
 Post&#8208;expand include size: 36428/2097152 bytes
 Template argument size: 11796/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1634/5000000 bytes
+Unstrip post&#8208;expand size: 1619/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   56.433      1 -total
- 19.38%   10.935      1 Template:Std_Base_navi
- 18.39%   10.376     14 Template:Variable
- 16.33%    9.213      8 Template:PropertyData
- 15.19%    8.574      2 Template:Navigation_menu_2
- 11.17%    6.301      2 Template:TitleProperty
-  9.86%    5.564      6 Template:PropertyView
-  6.78%    3.825      1 Template:Userdocnavi
-  6.51%    3.675      2 Template:Docnav
-  5.47%    3.085     13 Template:Incode
+100.00%   33.645      1 -total
+ 22.62%    7.611      1 Template:Std_Base_navi
+ 19.24%    6.473     14 Template:Variable
+ 18.56%    6.245      2 Template:Navigation_menu_2
+ 14.99%    5.044      8 Template:PropertyData
+ 13.05%    4.391      6 Template:PropertyView
+  7.14%    2.404      2 Template:TitleProperty
+  6.58%    2.214      1 Template:Userdocnavi
+  5.66%    1.906      2 Template:Docnav
+  5.03%    1.691      1 Template:GuiCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:347795-0!canonical and timestamp 20260114192622 and revision id 1738499. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:347795-0!canonical and timestamp 20260115095200 and revision id 1738499. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
