--- a/wiki/BIM_Layers.html
+++ b/wiki/BIM_Layers.html
@@ -61,26 +61,21 @@
 <h2><span class="mw-headline" id="NativeIFC">NativeIFC</span></h2>
 <p>This tool is the exact same as the <a href="Draft_LayerManager.html" title="Draft LayerManager">Draft LayerManager</a> tool, and creates the same layer object. There is only one difference: It has support for <a href="NativeIFC.html" class="mw-redirect" title="NativeIFC">NativeIFC</a> objects:
 </p>
-<ul><li>An IFC icon will indicate if a layer is part of an IFC project or not</li>
-<li>An <b>Assign IFC</b> button allows to move a layer to an IFC project and with that turn it into an IFC layer</li></ul>
+<ul><li>An IFC icon will indicate if a layer is part of an IFC project or not.</li>
+<li>An <b>Assign IFC</b> button allows to move a layer to an IFC project and with that turn it into an IFC layer.</li></ul>
 <p>Implementation of <a href="NativeIFC.html" class="mw-redirect" title="NativeIFC">NativeIFC</a> is a work in progress. Users can read <a rel="nofollow" class="external text" href="https://yorik.uncreated.net/?blog%2Ffreecad">Yorik's blog</a> for updates from a lead developer of NativeIFC functionality in FreeCAD.
 </p>
 <h2><span class="mw-headline" id="Usage">Usage</span></h2>
 <ol><li>There are several ways to invoke the command:
-<ul><li>Press the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">BIM Layers</a></span> button from the <a href="en/BIM_Workbench.html#Manage" title="BIM Workbench/en">Manage Toolbar</a>.</li>
-<li>Select the <b>Manage &rarr; <span typeof="mw:File"><a href="index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> manage Layers</b> option from the menu.</li></ul></li>
+<ul><li>Press the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Manage Layers</a></span> button.</li>
+<li>Select the <b>Manage &rarr; <span typeof="mw:File"><a href="index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Manage Layers</b> option from the menu.</li></ul></li>
 <li>Set options and press <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol>
-<p>Layers are an organizational tool with options to control several properties of your objects:
+<p>Refer to the documentation for <a href="Draft_Layer.html" title="Draft Layer">Draft Layers</a> for more information on settings.
 </p>
-<ul><li>Graphical appearance</li>
-<li>Layer properties for export to vector formats like <a href="DXF.html" title="DXF">DXF</a> &amp; <a href="FreeCAD_and_DWG_Import.html" title="FreeCAD and DWG Import">DWG</a></li>
-<li><a href="NativeIFC.html" class="mw-redirect" title="NativeIFC">NativeIFC</a> properties</li></ul>
-<p>Creating the first layer activates BIM layers in a new file.
-</p><p>Refer to the documentation for <a href="Draft_Layer.html" title="Draft Layer">Draft Layers</a> for more information on settings.
-</p>
-<h2><span class="mw-headline" id="Note">Note</span></h2>
-<p>Use the <a class="mw-selflink selflink">BIM Layers Manager</a> to create new <a class="mw-selflink selflink">BIM Layers</a>. To create <a href="Draft_Layer.html" title="Draft Layer">Draft Layers</a> select the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="index.php?title=Draft_NewLayer.svg&amp;filetimestamp=20250928155328&amp;.html" class="mw-file-description"><img src="File/Draft_NewLayer.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><a href="Draft_Layer.html" title="Draft Layer">Add New Layer</a></span> button from the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="index.php?title=Draft_tray_button_layer.png&amp;filetimestamp=20210724134408&amp;.html" class="mw-file-description"><img src="File/Draft_tray_button_layer.png" decoding="async" width="73" height="22" class="mw-file-element" data-file-width="73" data-file-height="22"></a></span> <a href="Draft_AutoGroup.html" title="Draft AutoGroup">Draft_AutoGroup</a></span> menu on the <a href="Draft_Tray.html" title="Draft Tray">Draft_Tray</a>
-</p><p><a href="Draft_Layer.html" title="Draft Layer">Draft Layers</a> have slightly different settings from <a class="mw-selflink selflink">BIM Layers</a>. Do not mix them unless you understand the <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=102246">differences</a>.
+<h2><span class="mw-headline" id="Notes">Notes</span></h2>
+<ul><li>Use the <a class="mw-selflink selflink">BIM Layers Manager</a> to create new <a class="mw-selflink selflink">BIM Layers</a>. To create <a href="Draft_Layer.html" title="Draft Layer">Draft Layers</a> select the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="index.php?title=Draft_NewLayer.svg&amp;filetimestamp=20250928155328&amp;.html" class="mw-file-description"><img src="File/Draft_NewLayer.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><a href="Draft_Layer.html" title="Draft Layer">Add New Layer</a></span> button from the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="index.php?title=Draft_tray_button_layer.png&amp;filetimestamp=20210724134408&amp;.html" class="mw-file-description"><img src="File/Draft_tray_button_layer.png" decoding="async" width="73" height="22" class="mw-file-element" data-file-width="73" data-file-height="22"></a></span> <a href="Draft_AutoGroup.html" title="Draft AutoGroup">Draft_AutoGroup</a></span> menu on the <a href="Draft_Tray.html" title="Draft Tray">Draft_Tray</a>.</li>
+<li><a href="Draft_Layer.html" title="Draft Layer">Draft Layers</a> have slightly different settings from <a class="mw-selflink selflink">BIM Layers</a>. Do not mix them unless you understand the <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=102246">differences</a>.</li></ul>
+<p><br>
 </p>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="File/BIM_Classification.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="BIM_Classification.html" title="BIM Classification">Classification</a></div>
@@ -131,15 +126,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260106204939
+Cached time: 20260115100004
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.093 seconds
-Real time usage: 0.100 seconds
-Preprocessor visited node count: 461/1000000
-Post&#8208;expand include size: 24463/2097152 bytes
-Template argument size: 8997/2097152 bytes
+CPU time usage: 0.118 seconds
+Real time usage: 0.133 seconds
+Preprocessor visited node count: 457/1000000
+Post&#8208;expand include size: 24477/2097152 bytes
+Template argument size: 9011/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -147,18 +142,18 @@ Unstrip post&#8208;expand size: 1131/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.532      1 -total
- 39.65%    5.365      1 Template:BIM_Tools_navi
- 37.52%    5.077      2 Template:Navigation_menu_2
- 14.99%    2.029      1 Template:Userdocnavi
- 11.94%    1.616      1 Template:GuiCommand
- 10.91%    1.476      2 Template:Docnav
-  6.66%    0.901      1 Template:Caption
-  6.41%    0.867      4 Template:Button
-  5.17%    0.700      1 Template:MenuCommand
+100.00%   18.130      1 -total
+ 41.52%    7.527      1 Template:BIM_Tools_navi
+ 35.05%    6.354      2 Template:Navigation_menu_2
+ 16.45%    2.982      1 Template:Userdocnavi
+ 10.81%    1.959      2 Template:Docnav
+ 10.17%    1.844      1 Template:GuiCommand
+  6.02%    1.092      1 Template:Caption
+  5.70%    1.034      4 Template:Button
+  4.83%    0.876      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:192076-0!canonical and timestamp 20260106205006 and revision id 1728396. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:192076-0!canonical and timestamp 20260115100013 and revision id 1738601. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
