--- a/wiki/BIM_Layers.html
+++ b/wiki/BIM_Layers.html
@@ -73,8 +73,8 @@
 <p>Refer to the documentation for <a href="Draft_Layer.html" title="Draft Layer">Draft Layers</a> for more information on settings.
 </p>
 <h2><span class="mw-headline" id="Notes">Notes</span></h2>
-<ul><li>Use the <a class="mw-selflink selflink">BIM Layers Manager</a> to create new <a class="mw-selflink selflink">BIM Layers</a>. To create <a href="Draft_Layer.html" title="Draft Layer">Draft Layers</a> select the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="index.php?title=Draft_NewLayer.svg&amp;filetimestamp=20250928155328&amp;.html" class="mw-file-description"><img src="File/Draft_NewLayer.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><a href="Draft_Layer.html" title="Draft Layer">Add New Layer</a></span> button from the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="index.php?title=Draft_tray_button_layer.png&amp;filetimestamp=20210724134408&amp;.html" class="mw-file-description"><img src="File/Draft_tray_button_layer.png" decoding="async" width="73" height="22" class="mw-file-element" data-file-width="73" data-file-height="22"></a></span> <a href="Draft_AutoGroup.html" title="Draft AutoGroup">Draft_AutoGroup</a></span> menu on the <a href="Draft_Tray.html" title="Draft Tray">Draft_Tray</a>.</li>
-<li><a href="Draft_Layer.html" title="Draft Layer">Draft Layers</a> have slightly different settings from <a class="mw-selflink selflink">BIM Layers</a>. Do not mix them unless you understand the <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=102246">differences</a>.</li></ul>
+<ul><li>Use the <a class="mw-selflink selflink">BIM Layers Manager</a> to create new BIM Layers. To create <a href="Draft_Layer.html" title="Draft Layer">Draft Layers</a> press the <span class="mw-default-size" typeof="mw:File"><a href="index.php?title=Draft_tray_button_layer.png&amp;filetimestamp=20210724134408&amp;.html" class="mw-file-description"><img src="File/Draft_tray_button_layer.png" decoding="async" width="73" height="22" class="mw-file-element" data-file-width="73" data-file-height="22"></a></span> button on the <a href="Draft_Tray.html" title="Draft Tray">Draft Tray</a>.</li>
+<li><a href="Draft_Layer.html" title="Draft Layer">Draft Layers</a> have slightly different settings from BIM Layers. Do not mix them unless you understand the <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=102246">differences</a>.</li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -126,15 +126,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115100004
+Cached time: 20260115100839
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.118 seconds
-Real time usage: 0.133 seconds
-Preprocessor visited node count: 457/1000000
-Post&#8208;expand include size: 24477/2097152 bytes
-Template argument size: 9011/2097152 bytes
+CPU time usage: 0.096 seconds
+Real time usage: 0.150 seconds
+Preprocessor visited node count: 447/1000000
+Post&#8208;expand include size: 23701/2097152 bytes
+Template argument size: 8893/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -142,18 +142,18 @@ Unstrip post&#8208;expand size: 1131/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.130      1 -total
- 41.52%    7.527      1 Template:BIM_Tools_navi
- 35.05%    6.354      2 Template:Navigation_menu_2
- 16.45%    2.982      1 Template:Userdocnavi
- 10.81%    1.959      2 Template:Docnav
- 10.17%    1.844      1 Template:GuiCommand
-  6.02%    1.092      1 Template:Caption
-  5.70%    1.034      4 Template:Button
-  4.83%    0.876      1 Template:MenuCommand
+100.00%   15.978      1 -total
+ 38.56%    6.161      2 Template:Navigation_menu_2
+ 36.10%    5.768      1 Template:BIM_Tools_navi
+ 22.96%    3.669      1 Template:Userdocnavi
+ 12.85%    2.053      2 Template:Docnav
+ 10.50%    1.678      1 Template:GuiCommand
+  5.44%    0.870      1 Template:Caption
+  4.67%    0.746      2 Template:Button
+  4.36%    0.697      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:192076-0!canonical and timestamp 20260115100013 and revision id 1738601. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:192076-0!canonical and timestamp 20260115100908 and revision id 1738602. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
