Marked this version for translation

--- a/wiki/BIM_Layers.html
+++ b/wiki/BIM_Layers.html
@@ -1,9 +1,9 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">BIM Layers</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-BIM+Layers&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--complete" title="BIM Ebenen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--med" title="BIM Ebenen (50% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
-<li><a href="fr/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--complete" title="BIM Calques (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><a href="it/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--med" title="BIM: Gestione degli strati (17% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="pl/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--complete" title="BIM: Warstwy (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
+<li><a href="fr/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--med" title="BIM Calques (50% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="it/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--low" title="BIM: Gestione degli strati (11% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="pl/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--med" title="BIM: Warstwy (50% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="File/BIM_Classification.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="BIM_Classification.html" title="BIM Classification">Classification</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/BIM_Material.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="BIM_Material.html" title="BIM Material">Materials</a>
@@ -126,34 +126,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115101121
+Cached time: 20260115101303
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.097 seconds
-Real time usage: 0.108 seconds
-Preprocessor visited node count: 447/1000000
+CPU time usage: 0.127 seconds
+Real time usage: 0.142 seconds
+Preprocessor visited node count: 453/1000000
 Post&#8208;expand include size: 23701/2097152 bytes
 Template argument size: 8893/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1131/5000000 bytes
+Unstrip post&#8208;expand size: 1113/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.018      1 -total
- 41.19%    5.774      1 Template:BIM_Tools_navi
- 36.64%    5.136      2 Template:Navigation_menu_2
- 14.50%    2.032      1 Template:Userdocnavi
- 11.70%    1.640      1 Template:GuiCommand
- 11.26%    1.579      2 Template:Docnav
-  6.66%    0.934      1 Template:Caption
-  5.99%    0.840      2 Template:Button
-  5.21%    0.731      1 Template:MenuCommand
+100.00%   21.902      1 -total
+ 36.13%    7.914      1 Template:BIM_Tools_navi
+ 28.76%    6.299      2 Template:Navigation_menu_2
+ 16.51%    3.616      1 Template:Userdocnavi
+ 11.66%    2.553      1 Template:GuiCommand
+ 11.51%    2.522      2 Template:Docnav
+  7.99%    1.750      1 Template:Caption
+  6.91%    1.513      2 Template:Button
+  5.65%    1.237      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:192076-0!canonical and timestamp 20260115101121 and revision id 1738604. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:192076-0!canonical and timestamp 20260115101303 and revision id 1738605. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
