--- a/wiki/BIM_Layers.html
+++ b/wiki/BIM_Layers.html
@@ -66,7 +66,7 @@
 <p>Implementation of <a href="NativeIFC.html" class="mw-redirect" title="NativeIFC">NativeIFC</a> is a work in progress. Users can read <a rel="nofollow" class="external text" href="https://yorik.uncreated.net/?blog%2Ffreecad">Yorik's blog</a> for updates from a lead developer of NativeIFC functionality in FreeCAD.
 </p>
 <h2><span class="mw-headline" id="Usage">Usage</span></h2>
-<ol><li>There are several ways to invoke the command:
+<ol><li>There are several ways to invoke the tool:
 <ul><li>Press the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Manage Layers</a></span> button.</li>
 <li>Select the <b>Manage &rarr; <span typeof="mw:File"><a href="index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Manage Layers</b> option from the menu.</li></ul></li>
 <li>Set options and press <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol>
@@ -126,12 +126,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115101303
+Cached time: 20260115101443
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.127 seconds
-Real time usage: 0.142 seconds
+CPU time usage: 0.098 seconds
+Real time usage: 0.114 seconds
 Preprocessor visited node count: 453/1000000
 Post&#8208;expand include size: 23701/2097152 bytes
 Template argument size: 8893/2097152 bytes
@@ -142,18 +142,18 @@ Unstrip post&#8208;expand size: 1113/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.902      1 -total
- 36.13%    7.914      1 Template:BIM_Tools_navi
- 28.76%    6.299      2 Template:Navigation_menu_2
- 16.51%    3.616      1 Template:Userdocnavi
- 11.66%    2.553      1 Template:GuiCommand
- 11.51%    2.522      2 Template:Docnav
-  7.99%    1.750      1 Template:Caption
-  6.91%    1.513      2 Template:Button
-  5.65%    1.237      1 Template:MenuCommand
+100.00%   16.658      1 -total
+ 42.83%    7.135      1 Template:BIM_Tools_navi
+ 41.04%    6.836      2 Template:Navigation_menu_2
+ 16.49%    2.747      1 Template:Userdocnavi
+  9.85%    1.640      1 Template:GuiCommand
+  9.73%    1.620      2 Template:Docnav
+  6.29%    1.048      2 Template:Button
+  5.82%    0.970      1 Template:Caption
+  5.56%    0.926      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:192076-0!canonical and timestamp 20260115101303 and revision id 1738605. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:192076-0!canonical and timestamp 20260115101445 and revision id 1738620. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
