--- a/wiki/BIM_Layers.html
+++ b/wiki/BIM_Layers.html
@@ -126,12 +126,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115101443
+Cached time: 20260115101501
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.098 seconds
-Real time usage: 0.114 seconds
+CPU time usage: 0.104 seconds
+Real time usage: 0.119 seconds
 Preprocessor visited node count: 453/1000000
 Post&#8208;expand include size: 23701/2097152 bytes
 Template argument size: 8893/2097152 bytes
@@ -142,18 +142,18 @@ Unstrip post&#8208;expand size: 1113/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.658      1 -total
- 42.83%    7.135      1 Template:BIM_Tools_navi
- 41.04%    6.836      2 Template:Navigation_menu_2
- 16.49%    2.747      1 Template:Userdocnavi
-  9.85%    1.640      1 Template:GuiCommand
-  9.73%    1.620      2 Template:Docnav
-  6.29%    1.048      2 Template:Button
-  5.82%    0.970      1 Template:Caption
-  5.56%    0.926      1 Template:MenuCommand
+100.00%   17.064      1 -total
+ 35.53%    6.062      1 Template:BIM_Tools_navi
+ 34.02%    5.805      2 Template:Navigation_menu_2
+ 16.77%    2.861      1 Template:Userdocnavi
+ 13.10%    2.235      1 Template:GuiCommand
+ 10.79%    1.841      2 Template:Docnav
+  8.04%    1.372      1 Template:Caption
+  6.84%    1.168      2 Template:Button
+  5.45%    0.930      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:192076-0!canonical and timestamp 20260115101445 and revision id 1738620. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:192076-0!canonical and timestamp 20260115101501 and revision id 1738620. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
