--- a/wiki/BIM_Setup.html
+++ b/wiki/BIM_Setup.html
@@ -1,12 +1,12 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">BIM Setup</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-BIM+Setup&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--complete" title="BIM Einrichten (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--high" title="BIM Einrichten (78% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
-<li><a href="es/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--med" title="BIM Setup (29% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="fr/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--complete" title="BIM Configuration des BIM (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><a href="it/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--med" title="Setup BIM (29% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="pl/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--complete" title="BIM: Konfiguracja &#347;rodowiska (100% translated)" lang="pl" dir="ltr">polski</a></li>
-<li><a href="ro/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--med" title="BIM Setup (29% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
-<li><a href="ru/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--med" title="BIM Setup (29% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
+<li><a href="es/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--med" title="BIM Setup (22% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
+<li><a href="fr/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--high" title="BIM Configuration des BIM (78% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="it/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--med" title="Setup BIM (22% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="pl/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--high" title="BIM: Konfiguracja &#347;rodowiska (78% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="ro/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--med" title="BIM Setup (22% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
+<li><a href="ru/BIM_Setup.html" class="mw-pt-progress mw-pt-progress--med" title="BIM Setup (22% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="File/Arch_CutPlane.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="Arch_CutPlane.html" title="Arch CutPlane">CutPlane</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/BIM_Views.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="BIM_Views.html" title="BIM Views">Views</a>
@@ -113,33 +113,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115101613
+Cached time: 20260115101653
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.112 seconds
-Real time usage: 0.128 seconds
+CPU time usage: 0.109 seconds
+Real time usage: 0.188 seconds
 Preprocessor visited node count: 406/1000000
 Post&#8208;expand include size: 22575/2097152 bytes
 Template argument size: 8773/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1582/5000000 bytes
+Unstrip post&#8208;expand size: 1567/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.282      1 -total
- 43.50%    6.648      1 Template:BIM_Tools_navi
- 39.14%    5.981      2 Template:Navigation_menu_2
- 15.28%    2.335      1 Template:Userdocnavi
- 12.41%    1.896      1 Template:GuiCommand
- 10.35%    1.581      2 Template:Docnav
-  8.36%    1.278      2 Template:MenuCommand
-  6.21%    0.949      1 Template:Button
+100.00%   21.120      1 -total
+ 34.94%    7.380      1 Template:BIM_Tools_navi
+ 31.35%    6.620      2 Template:Docnav
+ 24.98%    5.275      2 Template:Navigation_menu_2
+ 12.56%    2.652      1 Template:GuiCommand
+  9.19%    1.940      1 Template:Userdocnavi
+  4.76%    1.006      2 Template:MenuCommand
+  4.42%    0.933      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116585-0!canonical and timestamp 20260115101619 and revision id 1738627. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116585-0!canonical and timestamp 20260115101653 and revision id 1738628. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
